# Polis

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  GOVERNANCE.md  INVARIANTS.md  README.md  SECURITY.md
.github/workflows/: ci.yml
client/: README.md  pyproject.toml
client/polis_client/: __init__.py  client.py  models.py
crypto/: Cargo.toml
crypto/src/: did.rs  hashing.rs  lib.rs  signing.rs  zkp.rs
docker/: Dockerfile.node  docker-compose.yml
node/: pyproject.toml
node/polis_node/: __init__.py  __main__.py
node/polis_node/api/: __init__.py  app.py  dependencies.py  state.py
node/polis_node/api/routes/: __init__.py  identity.py  node.py  records.py
node/polis_node/attribution/: __init__.py  record.py
node/polis_node/config/: __init__.py  logging.py  settings.py
node/polis_node/identity/: __init__.py  delegation.py  did.py  persistence.py  secure_bytes.py
node/polis_node/moderation/: __init__.py  engine.py
node/polis_node/network/: __init__.py  peer.py
node/polis_node/storage/: __init__.py  arweave.py  interface.py  ipfs.py  local.py
node/tests/: conftest.py  test_advanced.py  test_api.py  test_api_middleware.py  test_attribution.py  test_config.py  test_coverage_batch1.py  test_coverage_batch2.py  test_delegation.py  test_did_key_agreement.py  test_identity.py  test_ipfs_arweave.py  test_logging_config.py  test_main.py  test_moderation.py  test_peer_manager.py  test_persistence.py  test_state_extensions.py  test_storage.py
node/tests/integration/: test_multi_node.py
specs/identity/: polis-did-spec.md
specs/integration/: polis-api-spec.md
specs/moderation/: polis-moderation-spec.md
specs/network/: polis-network-spec.md
specs/storage/: polis-storage-spec.md
