[package]
name = "polis-crypto"
version = "0.1.0"
edition = "2021"
description = "Polis cryptographic primitives — Ed25519, AES-256-GCM, ZKP interfaces"
license = "MIT"

[dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["digest"] }
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
hex = "0.4"
