[tool.poetry]
name = "polis-node"
version = "0.1.0"
description = "Polis Node — core daemon for the Polis decentralized protocol stack"
authors = ["Polis Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "polis_node" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
cryptography = "^42.0.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
mnemonic = "^0.21"
base58 = "^2.1.1"
canonicaljson = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["polis_node"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
